<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="50sp"/>

            <ViewFlipper
                android:id="@+id/view_flipper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="32dp"
                tools:context=".ui.login.LoginActivity">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:textColorHint="@color/white">

                        <com.triangleleft.flashcards.ui.common.CustomEditText
                            android:id="@+id/login_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/white"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:textColorHint="@color/white">

                        <com.triangleleft.flashcards.ui.common.CustomEditText
                            android:id="@+id/login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/white"/>
                    </android.support.design.widget.TextInputLayout>

                    <CheckBox
                        android:id="@+id/login_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:checked="true"
                        android:gravity="center_vertical"
                        android:text="@string/login_checkbox"
                        android:textColor="@color/white"/>

                    <Button
                        android:id="@+id/login_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorAccent"
                        android:text="@string/action_sign_in"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                </LinearLayout>

                <com.pnikosis.materialishprogress.ProgressWheel
                    android:id="@+id/login_progress"
                    android:layout_width="@dimen/progress_wheel_size"
                    android:layout_height="@dimen/progress_wheel_size"
                    android:layout_gravity="center"
                    app:matProg_barColor="@color/white"
                    app:matProg_progressIndeterminate="true"/>

            </ViewFlipper>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>