<resources>
    <string name="app_name">Flashcards</string>
    <string name="title_activity_login">Sign in</string>
    <string name="button_retry">Retry</string>
    <string name="placeholder">[Placeholder]</string>
    <string
        name="long_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
    </string>

    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="wrong_login">Wrong login</string>
    <string name="wrong_password">Wrong password</string>
    <string name="login_checkbox">Remember me</string>
    <string name="login_network_error">Network error</string>
    <string name="login_generic_error">Generic error</string>

    <!-- Vocabulary list -->
    <string name="vocabulary_list_error">Couldn\'t load words</string>
    <string name="vocabulary_list_no_words">You haven\'t learned any words yet</string>
    <string name="vocabulary_list_refresh_error">Failed to refresh words list</string>

    <!-- Flashcards -->
    <string name="flashcard_result_no_errors">Great job!\nYou knew all the words</string>
    <string name="flashcard_result_errors">Keep practising.\nYou didn\'t know following words</string>
    <string name="flashcard_button_wrong">I was wrong</string>
    <string name="flashcard_button_right">I was right</string>
    <string name="flashcard_button_show_answer">Show answer</string>
    <string name="flashcard_error">Failed to load flashcards</string>
    <string name="flashcard_dialog_offline">Do you want to start in offline mode?</string>
    <string name="flashcard_dialog_yes">Yes</string>
    <string name="flashcard_dialog_no">No</string>

    <!-- Vocabulary word -->
    <string name="word_translation">Translation</string>
    <string name="word_strength">Strength</string>
    <string name="word_gender">Gender</string>
    <string name="word_part_of_speech">Part of speech</string>

    <!-- Navigation drawer -->
    <string name="language_level">%d lvl</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="drawer_language_switch_error">Failed to switch language</string>
    <string name="drawer_userdata_update_error">Failed to update user info</string>

    <!-- Strings related to Settings -->
    <string name="logout">Logout</string>
    <string name="vocabulary_word_not_available">N/A</string>

    <!-- Flashcards settings dialog -->
    <string name="review_flashcards">Review flashcards</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="number_of_words">Number of words</string>
    <string name="learning_direction">Learning direction</string>
    <string name="direction">%1$s -> %2$s</string>


</resources>
