...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:previewChild="3">

        <!-- Progress -->
        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progress_wheel"
            style="@style/ProgressBar"
            android:layout_gravity="center"
            app:matProg_barColor="@color/white" />

        <!--Cards -->
        <include layout="@layout/activity_flashcards_cards" />
...
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/white" />

        <ImageView
            android:id="@+id/flashcard_button_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/ic_refresh_black_24dp"
...
